# pythonisms

./: README.md  pyproject.toml
pythonisms/: linked_list.py  pythonisms.py
tests/: test_pythonisms.py
